Add test for error type hierarchies

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(TestLLVMExpected
 
     TestErrorList.cpp
     TestErrorSuccess.cpp
+    TestErrorTypeHierarchies.cpp
     TestExtraPayloadError.cpp
     TestStringError.cpp
     TestForceAllErrorsDebug.cpp
