Add OverheadExample benchmark for exceptions

--- a/benchmarks/Exception/CMakeLists.txt
+++ b/benchmarks/Exception/CMakeLists.txt
@@ -13,6 +13,7 @@ endif()
 add_executable(BenchmarkException
     BenchmarkException.cpp
 
+    BenchOverheadExample.cpp
     BenchSuccessRates.cpp
 
     FastRand.h
