Fix MSVC builds on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,19 @@ else()
     message(FATAL_ERROR "Compiler not supported")
 endif()
 
+# use static runtime libraries for MSVC builds
+if(MSVC)
+  set(variables 
+    CMAKE_CXX_FLAGS_DEBUG
+    CMAKE_CXX_FLAGS_RELEASE
+  )
+  foreach(variable ${variables})
+	if(${variable} MATCHES "/MD")
+	  string(REGEX REPLACE "/MD" "/MT" ${variable} "${${variable}}")
+	endif()
+  endforeach()
+endif()
+
 message("")
 message("Global")
 
