--- a/benchmarks/LLVMExpected/CMakeLists.txt
+++ b/benchmarks/LLVMExpected/CMakeLists.txt
@@ -17,6 +17,19 @@ set_target_properties(BenchmarkLLVMExpected PROPERTIES
     CXX_EXTENSIONS OFF
 )
 
+# use static runtime libraries for MSVC builds
+if(MSVC)
+  set(variables 
+    CMAKE_CXX_FLAGS_DEBUG
+    CMAKE_CXX_FLAGS_RELEASE
+  )
+  foreach(variable ${variables})
+	if(${variable} MATCHES "/MD")
+	  string(REGEX REPLACE "/MD" "/MT" ${variable} "${${variable}}")
+	endif()
+  endforeach()
+endif()
+
 # add Google Benchmark libraries
 find_package(benchmark REQUIRED)
 
