Live at head with googletest and benchmark as submodules

--- a/benchmarks/Exception/CMakeLists.txt
+++ b/benchmarks/Exception/CMakeLists.txt
@@ -1,15 +1,5 @@
 cmake_minimum_required(VERSION 3.2)
 
-if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-    set(ENABLE_RTTI_FLAG /GR)
-    set(ENABLE_EXCEPTIONS_FLAG /EHsc)
-elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-    set(ENABLE_RTTI_FLAG -frtti)
-    set(ENABLE_EXCEPTIONS_FLAG -fexceptions)
-else()
-    message(FATAL_ERROR "Compiler not supported")
-endif()
-
 add_executable(BenchmarkException
     BenchmarkException.cpp
 
@@ -19,20 +9,14 @@ add_executable(BenchmarkException
     FastRand.h
 )
 
-set_target_properties(BenchmarkException PROPERTIES
-    CXX_STANDARD 14
-    CXX_STANDARD_REQUIRED ON
-    CXX_EXTENSIONS OFF
-)
-
-# add Google Benchmark libraries
-find_package(benchmark REQUIRED)
-
 target_include_directories(BenchmarkException PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-target_compile_options(BenchmarkException PUBLIC 
+# This target doesn't link the LLVMExpected library 
+# and so it won't inherit any compiler options.
+target_compile_options(BenchmarkException PRIVATE 
+	${USE_CXX_STANDARD_14}
     ${ENABLE_RTTI_FLAG}
     ${ENABLE_EXCEPTIONS_FLAG}
     ${DISABLE_STACKPROTECTOR_FLAG}
@@ -40,7 +24,7 @@ target_compile_options(BenchmarkException PUBLIC
 )
 
 target_link_libraries(BenchmarkException PRIVATE
-    benchmark::benchmark
+    benchmark
 )
 
 message("")
