--- a/benchmarks/LLVMExpected/CMakeLists.txt
+++ b/benchmarks/LLVMExpected/CMakeLists.txt
@@ -11,12 +11,6 @@ add_executable(BenchmarkLLVMExpected
     FastRand.h
 )
 
-set_target_properties(BenchmarkLLVMExpected PROPERTIES
-    CXX_STANDARD 14
-    CXX_STANDARD_REQUIRED ON
-    CXX_EXTENSIONS OFF
-)
-
 # use static runtime libraries for MSVC builds
 if(MSVC)
   set(variables 
@@ -30,23 +24,13 @@ if(MSVC)
   endforeach()
 endif()
 
-# add Google Benchmark libraries
-find_package(benchmark REQUIRED)
-
 target_include_directories(BenchmarkLLVMExpected PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-target_compile_options(BenchmarkLLVMExpected PUBLIC 
-    ${DISABLE_RTTI_FLAG}
-    ${DISABLE_EXCEPTIONS_FLAG}
-    ${DISABLE_STACKPROTECTOR_FLAG}
-    ${DISABLE_FRAMEPOINTER_FLAG}
-)
-
 target_link_libraries(BenchmarkLLVMExpected PRIVATE
     LLVMExpected
-    benchmark::benchmark
+    benchmark
 )
 
 message("")
