--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,26 +2,25 @@ cmake_minimum_required(VERSION 3.2)
 
 project(LLVMExpected VERSION 1.0 LANGUAGES CXX)
 
-if(WIN32)
-    set(OS_NAME "Win")
-elseif(APPLE)
-    set(OS_NAME "OSX")
-elseif(UNIX)
-    set(OS_NAME "Linux")
-else()
-    message(FATAL_ERROR "Operating system not supported")
-endif()
+option(LLVMEXPECTED_INCLUDE_TESTS      "Configure build to include the tests subproject"           OFF)
+option(LLVMEXPECTED_INCLUDE_BENCHMARKS "Configure build to include the subprojects for benchmarks" OFF)
 
 if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-    set(DISABLE_RTTI_FLAG /GR-)
+    set(USE_CXX_STANDARD_14 "/std:c++14")
+    set(ENABLE_RTTI_FLAG "/GR")
+    set(ENABLE_EXCEPTIONS_FLAG "/EHsc")
+    set(DISABLE_RTTI_FLAG "/GR-")
     set(DISABLE_EXCEPTIONS_FLAG "")
-    set(DISABLE_STACKPROTECTOR_FLAG /GS-)
-    set(DISABLE_FRAMEPOINTER_FLAG /Oy)
+    set(DISABLE_STACKPROTECTOR_FLAG "/GS-")
+    set(DISABLE_FRAMEPOINTER_FLAG "/Oy")
 elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-    set(DISABLE_RTTI_FLAG -fno-rtti)
-    set(DISABLE_EXCEPTIONS_FLAG -fno-exceptions)
-    set(DISABLE_STACKPROTECTOR_FLAG -fno-stack-protector)
-    set(DISABLE_FRAMEPOINTER_FLAG -fomit-frame-pointer)
+    set(USE_CXX_STANDARD_14 "-std=c++14")
+    set(ENABLE_RTTI_FLAG "-frtti")
+    set(ENABLE_EXCEPTIONS_FLAG "-fexceptions")
+    set(DISABLE_RTTI_FLAG "-fno-rtti")
+    set(DISABLE_EXCEPTIONS_FLAG "-fno-exceptions")
+    set(DISABLE_STACKPROTECTOR_FLAG "-fno-stack-protector")
+    set(DISABLE_FRAMEPOINTER_FLAG "-fomit-frame-pointer")
 else()
     message(FATAL_ERROR "Compiler not supported")
 endif()
@@ -42,7 +41,7 @@ endif()
 message("")
 message("Global")
 
-message(STATUS "System: ${OS_NAME}")
+message(STATUS "System: ${CMAKE_SYSTEM_NAME}")
 message(STATUS "Compiler: ${CMAKE_CXX_COMPILER_ID}")
 message(STATUS "C++ flags: ${CMAKE_CXX_FLAGS}")
 message(STATUS "C++ flags Debug: ${CMAKE_CXX_FLAGS_DEBUG}")
@@ -62,13 +61,8 @@ target_include_directories(LLVMExpected PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
-set_target_properties(LLVMExpected PROPERTIES
-    CXX_STANDARD 14
-    CXX_STANDARD_REQUIRED ON
-    CXX_EXTENSIONS OFF
-)
-
 target_compile_options(LLVMExpected PUBLIC 
+	${USE_CXX_STANDARD_14}
     ${DISABLE_RTTI_FLAG}
     ${DISABLE_EXCEPTIONS_FLAG}
     ${DISABLE_STACKPROTECTOR_FLAG}
@@ -98,6 +92,27 @@ if (NOT Prop STREQUAL "Prop-NOTFOUND")
     message(STATUS "Compile definitions: ${Prop}")
 endif()
 
-add_subdirectory(tests)
-add_subdirectory(benchmarks/LLVMExpected)
-add_subdirectory(benchmarks/Exception)
+if (${LLVMEXPECTED_INCLUDE_TESTS})
+  add_subdirectory(tests)
+else()
+  message("")
+  message("TestLLVMExpected")
+  message(STATUS "Disabled")
+  message(STATUS "Configure with -DLLVMEXPECTED_INCLUDE_TESTS=ON to enable")
+endif()
+
+if (${LLVMEXPECTED_INCLUDE_BENCHMARKS})
+  add_subdirectory(benchmarks)
+else()
+  message("")
+  message("BenchmarkException")
+  message(STATUS "Disabled")
+  message(STATUS "Configure with -DLLVMEXPECTED_INCLUDE_BENCHMARKS=ON to enable")
+  message("")
+  message("BenchmarkLLVMExpected")
+  message(STATUS "Disabled")
+  message(STATUS "Configure with -DLLVMEXPECTED_INCLUDE_BENCHMARKS=ON to enable")
+endif()
+
+message("")
+message("Global")
