Split up definitions for compiler flags and fast random number generator into separate headers

--- a/benchmarks/Exception/CMakeLists.txt
+++ b/benchmarks/Exception/CMakeLists.txt
@@ -13,7 +13,8 @@ add_executable(BenchmarkException
     SuccessRateException.cpp
     SuccessRateOutcome.cpp
 
-    FastRand.h
+    ../common/Compiler.h
+    ../common/FastRand.h
 )
 
 target_include_directories(BenchmarkException PRIVATE
