Forwarding benchmarks: measure idiomatic usage with simulated workloads instead of pure forwarding

--- a/benchmarks/Exception/CMakeLists.txt
+++ b/benchmarks/Exception/CMakeLists.txt
@@ -3,8 +3,10 @@ cmake_minimum_required(VERSION 3.2)
 add_executable(BenchmarkException
     BenchmarkException.cpp
 
-    FwdException.cpp
+    FwdIntException.cpp
     FwdIntOutcome.cpp
+
+    FwdVoidException.cpp
     FwdVoidOutcome.cpp
 
     PayloadException.cpp
