Add function to simulate workload, aiming for predictability and context-independence
* executes 16 nop opcodes
* takes single int input and returns it unmodified
* globs input variable to prevent optimization
* maximum independence from sources of instability like caching, paging or pipelining

--- a/benchmarks/LLVMExpected/CMakeLists.txt
+++ b/benchmarks/LLVMExpected/CMakeLists.txt
@@ -21,6 +21,8 @@ add_executable(BenchmarkLLVMExpected
 
     ../common/Compiler.h
     ../common/FastRand.h
+    ../common/WorkloadSim.h
+    ../common/WorkloadSimBench.cpp
 )
 
 # use static runtime libraries for MSVC builds
