--- a/benchmarks/Exception/CMakeLists.txt
+++ b/benchmarks/Exception/CMakeLists.txt
@@ -15,6 +15,8 @@ add_executable(BenchmarkException
 
     ../common/Compiler.h
     ../common/FastRand.h
+    ../common/WorkloadSim.h
+    ../common/WorkloadSimBench.cpp
 )
 
 target_include_directories(BenchmarkException PRIVATE
